# nvibrant

./: .gitignore  .gitmodules  Cargo.toml  build.rs  changelog.md  default.nix  flake.nix  hatch_build.py  license.txt  make.py  module.nix  pyproject.toml  readme.md  zensical.toml
.github/ISSUE_TEMPLATE/: config.yml  new-drivers.yml
.github/workflows/: release.yml  website.yml
nvibrant/: __init__.py  __main__.py  main.cpp  main.rs
website/: changelog.md  extra.css  faq.md  help.md  index.md
website/about/: changelog.md
website/docs/: autostart.md  dithering.md  index.md  laptop.md  multigpu.md  vibrance.md
website/get/: actions.md  community.md  distro.md  index.md  pypi.md  source.md
