[project.urls]
GitHub = "https://github.com/Tremeschin/nvibrant"

[project]
name        = "nvibrant"
description = "🟢 Nvidia Digital Vibrance on Wayland"
authors     = [{name="Tremeschin"}]
version     = "1.2.0"
readme      = "readme.md"
license     = "GPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "packaging",
]

[project.scripts]
nvibrant = "nvibrant.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
dependencies = [
    "packaging",
    "meson",
    "ninja",
]

[tool.hatch.build.targets.sdist]
exclude = ["open-gpu"]

[tool.hatch.build.targets.wheel]
exclude = ["main.cpp"]
