[project]
name        = "nvibrant"
description = "🟢 Nvidia Digital Vibrance on Wayland"
version     = "1.3.0"
license     = "MIT"
readme      = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "packaging",
]

[project.urls]
GitHub = "https://github.com/Tremeschin/nvibrant"

[project.scripts]
nvibrant = "nvibrant.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
dependencies = [
    "packaging",
    "meson",
    "ninja",
]

[tool.hatch.build.targets.sdist]
exclude = ["open-gpu"]

[tool.hatch.build.targets.wheel]
exclude = ["main.cpp"]
